--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,9 @@ body {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
+
+  .container .row {
+      padding: 20px 0 0 0;
+      border-style: solid;
+      
+  }
