--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,12 @@ body {
     transition: all .3s ease-in-out;
   }
 
-  .container .row {
-      padding: 20px 0 0 0;
+  .col-sm-10  {
+      padding: 10px 0 0 10px;
       border-style: solid;
-      
-  }
+      }
+  
+  .col-sm-1  {
+        padding: 5px 0 0 0px;
+        
+        }
