--- a/css/style.css
+++ b/css/style.css
@@ -69,13 +69,20 @@ body {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
-
+  .container {
+      justify-content: center;
+  }
   .col-sm-10  {
       padding: 10px 0 0 10px;
       border-style: solid;
+      justify-content: center;
       }
   
   .col-sm-1  {
         padding: px 0 0 0px;
         
         }
+
+  .border {
+      padding: 10px 30px 0 0 ;
+  }
